force-app/main/default/objects/MassUpdateEvent__e/MassUpdateEvent__e.object-meta.xml
<CustomObject>
    <label>Mass Update Event</label>
    <pluralLabel>Mass Update Events</pluralLabel>
</CustomObject>