force-app/main/default/objects/MassUpdateEvent__e/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <label>Execution Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>