force-app/main/default/objects/MassUpdateEvent__e/fields/LineId__c.field-meta.xml
<CustomField>
    <fullName>LineId__c</fullName>
    <label>Line ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>